# ProveKit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  License.md  README.md  ROADMAP.md  params  proof  rust-toolchain.toml  rustfmt.toml
block-multiplier/: Cargo.toml  build.rs
block-multiplier/benches/: bench.rs
block-multiplier/src/: block_simd.rs  constants.rs  lib.rs  portable_simd.rs  rtz.rs  scalar.rs  utils.rs
block-multiplier/src/aarch64/: mod.rs  montgomery_interleaved_3.s  montgomery_interleaved_4.s  montgomery_log_jump.s  montgomery_square_interleaved_3.s  montgomery_square_interleaved_4.s  montgomery_square_log_interleaved_3.s  montgomery_square_log_interleaved_4.s
cm31_ntt/: Cargo.toml  README.md
cm31_ntt/benches/: ntt.rs  ntt_2_22.rs  ntt_2_23.rs  ntt_2_24.rs  ntt_2_24_optimisation_attempt.rs  ntt_32768.rs  ntt_block_8.rs  ntt_in_place.rs  ntt_precomp.rs  ntt_r8_hybrid_p.rs  ntt_r8_hybrid_ps.rs  ntt_r8_ip.rs  ntt_r8_ip_p.rs  ntt_r8_s2_hybrid_p.rs  ntt_r8_s4_hybrid_p.rs  ntt_r8_vec.rs  ntt_r8_vec_p.rs  ntt_vec.rs  ntt_vec_precomp.rs  sequential_cm13_muls.rs  sequential_ntt_block_8.rs
cm31_ntt/src/: cm31.rs  lib.rs  m31.rs  ntt.rs  ntt_experiments.rs  ntt_optimisation_attempt.rs  ntt_utils.rs  rm31.rs
cm31_ntt/to_delete/: ntt.rs  ntt_optimisation_attempt.rs  ntt_r.rs  ntt_radix_8.rs  ntt_s.rs
cm31_ntt/to_delete/benches/: ntt_8_stride_2.rs  ntt_block_8.rs  ntt_precompute.rs  ntt_r.rs  ntt_radix_8.rs  ntt_radix_8_optimisation_attempt.rs  ntt_s.rs
fp-rounding/: Cargo.toml
fp-rounding/benches/: main.rs
fp-rounding/src/: lib.rs  mode_guard.rs  rounding_direction.rs  rounding_guard.rs  rounding_mode.rs  utils.rs
fp-rounding/src/arch/: aarch64.rs  mod.rs  x86_64.rs
merkle-hash-bench/: Cargo.toml  LICENSE  README.md
merkle-hash-bench/src/: blake2_icicle.rs  blake3.rs  blake3_naive.rs  keccak_api.rs  keccak_icicle.rs  main.rs  poseidon2_bn254_plonky3.rs  poseidon2_bn254_ruint.rs  poseidon2_bn254_zkhash.rs  poseidon2_icicle.rs  poseidon2_t2_icicle.rs  poseidon2_t2_ruint.rs  poseidon2_t3_icicle.rs  poseidon2_t3_plonky3.rs  poseidon2_t3_ruint.rs  poseidon2_t3_zkhash.rs  poseidon_icicle.rs  profile.json  registery.rs  sha256_neon.rs  skyscraper_bn254_ark.rs  skyscraper_bn254_portable.rs  skyscraper_bn254_ref.rs  skyscraper_bn254_ruint.rs  skyscraper_neon.rs  utils.rs
merkle-hash-bench/src/hashes/: blake2_icicle.rs  blake2s_stwo.rs  blake3.rs  blake3_naive.rs  icicle.rs  keccak_api.rs  keccak_icicle.rs  keccak_neon.rs  mod.rs  plonky3.rs  poseidon2_t2_icicle.rs  poseidon2_t2_ruint.rs  poseidon2_t3_icicle.rs  poseidon2_t3_plonky3.rs  poseidon2_t3_ruint.rs  poseidon2_t3_zkhash.rs  poseidon_icicle.rs  prove_kit.rs  sha256_neon.rs  skyscraper_bn254_ref.rs  skyscraper_bn254_ruint.rs  zkhash.rs
merkle-hash-bench/src/mod_ring/: fields.rs  mod.rs  ruint.rs
noir-r1cs/: Cargo.toml  README.md  rustfmt.toml
noir-r1cs/benches/: bench.rs  poseidon-1000.np  poseidon-1000.nps
noir-r1cs/noir-examples/basic/: Prover.toml
noir-r1cs/noir-examples/basic-3/: Prover.toml
noir-r1cs/noir-examples/poseidon-rounds/: Prover.toml
noir-r1cs/noir-examples/poseidon-var/: Prover.toml
noir-r1cs/noir-passport-examples/: compare_citizenship.json
noir-r1cs/noir-passport-examples/circuit_stats_programs/: compare_age.json  compare_birthdate.json  exclusion_check_country.json  outer.json  sig_check_dsc_tbs_1500_rsa_pkcs_2048.json  sig_check_dsc_tbs_700_rsa_pkcs_2048.json  sig_check_dsc_tbs_700_rsa_pkcs_2048_sha256.json
noir-r1cs/src/: bin_op_helpers.rs  binops.rs  compiler.rs  digits.rs  gnark_config.rs  interner.rs  lib.rs  main.rs  memory.rs  noir_proof_scheme.rs  noir_to_r1cs.rs  noir_witness.rs  prover.rs  r1cs.rs  r1cs_matrices.rs  r1cs_solver.rs  ram.rs  range_check.rs  rom.rs  solver.rs  spark.rs  sparse_matrix.rs  test_compiler.rs  test_functions.rs  utils.rs  whir_r1cs.rs  witness.rs
noir-r1cs/src/cli/: main.rs  measuring_alloc.rs  span_stats.rs
noir-r1cs/src/cmd/: mod.rs  prepare.rs  prove.rs  utils.rs
noir-r1cs/src/file/: bin.rs  buf_ext.rs  counting_writer.rs  json.rs  mod.rs
noir-r1cs/src/skyscraper/: mod.rs  skyscraper.rs  skyscraper_for_whir.rs  skyscraper_impl.rs  skyscraper_pow.rs  whir.rs
noir-r1cs/src/utils/: field_utils.rs  file_io.rs  helpers.rs  mod.rs  print_abi.rs  serde_ark.rs  serde_ark_option.rs  serde_hex.rs  serde_jsonify.rs  sumcheck.rs  zk_utils.rs
noir-r1cs/src/whir_r1cs/: mod.rs  utils.rs  whir_utils.rs
noir-r1cs/tests/: compiler.rs
noir-tools/: Cargo.toml
noir-tools/src/: lib.rs
ntt/: Cargo.toml
ntt/benches/: ntt_engine.rs
ntt/src/: lib.rs  main.rs  matrix.rs  ntt.rs  proptest.rs
playground/cm31_ntt/: Cargo.toml
playground/cm31_ntt/benches/: ntt_r8_hybrid_p.rs  ntt_r8_hybrid_ps.rs  ntt_r8_ip.rs  ntt_r8_ip_p.rs  ntt_r8_s4_hybrid_p.rs  ntt_r8_vec.rs  ntt_r8_vec_p.rs
playground/cm31_ntt/src/: cm31.rs  lib.rs  ntt.rs  ntt_utils.rs
playground/passport-input-gen/: Cargo.toml  README.md
playground/passport-input-gen/csca_registry/: csca_public_key.json
provekit/common/: Cargo.toml
provekit/common/src/: lib.rs  (+8 more)
provekit/prover/: Cargo.toml
provekit/r1cs-compiler/: Cargo.toml
provekit/verifier/: Cargo.toml
prover/: Cargo.toml  params  proof  r1cs_sample.json  r1cs_sample_bigger.json
prover/src/: lib.rs  main.rs  skyscraper.rs  skyscraper_for_whir.rs  skyscraper_pow.rs  skyscraper_traits_for_whir.rs  sumcheck_utils.rs  utils.rs  whir_utils.rs
skyscraper/: Cargo.toml
skyscraper/benches/: bench.rs
skyscraper/block-multiplier/: Cargo.toml  build.rs
skyscraper/block-multiplier-codegen/: Cargo.toml  README.md
skyscraper/core/: Cargo.toml  Readme.md
skyscraper/fp-rounding/: Cargo.toml
skyscraper/hla/: Cargo.toml
skyscraper/src/: arithmetic.rs  bar.rs  block.rs  block2.rs  block3.rs  block4.rs  constants.rs  generic.rs  lib.rs  pow.rs  reduce.rs  reference.rs  scalar.rs  simple.rs  v1.rs
tooling/cli/: Cargo.toml
tooling/provekit-bench/: Cargo.toml
tooling/provekit-gnark/: Cargo.toml
tooling/verifier-server/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml
(+454 files in other folders)
