[workspace]
resolver = "2"
members = [
    "noir-r1cs", "noir-r1cs-2",
    "merkle-hash-bench",
    "fp-rounding",
    "hla",
    "block-multiplier",
    "block-multiplier-codegen",
    "skyscraper",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
authors = [
    "Remco Bloemen <remco@world.org>",
    "Philipp Sippl <philipp@world.org>",
    "Yuval Domb",
    "Xander van der Goot",
    "Koh Wei Jie",
    "Tony Wu",
    # TODO: More contributors
]
license = "MIT"
homepage = "https://github.com/worldfnd/ProveKit"
repository = "https://github.com/worldfnd/ProveKit"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
perf = "warn"
complexity = "warn"
style = "warn"
correctness = "warn"
suspicious = "warn"
missing_docs_in_private_items = { level = "allow", priority = 1 }

[profile.release]
debug = true      # Generate symbol info for profiling
opt-level = 3
codegen-units = 1
lto = "fat"

# Doing light optimizations helps test performance more than it hurts build time.
[profile.test]
opt-level = 2

# Compilation profile for any non-workspace member. We want to optimize these even in debug mode.
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
divan = { package = "codspeed-divan-compat", version = "*" }
ruint = { version = "1.12.3", features = ["num-traits", "rand"] }
rand = "0.9.1"
subtle = "2.6.1"
tracing = "0.1.41"
bytemuck = "1.22.0"
hex-literal = "0.4.1"
hex = "0.4.3"
itertools = "0.13.0"
flate2 = "1.0"
rayon = "1.10.0"
bincode = "1.3"
postcard = { version = "1.1.1", features = ["use-std"] }
zstd = "0.13.3"
bytes = "1.10.1"
proptest = "1.6.0"
zerocopy = "0.8.25"


# Noir lang: make sure it matches installed version `noirup -C v1.0.0-beta.3`
# Note: to simplify things, pick a version that has the same `ark_ff` version as `whir`.
acir = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.3" }
acvm = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.3" }
acir_field = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.3" }
noirc_abi = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.3" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.3" }
noirc_printable_type = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.3" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.3" }

# WHIR
whir = { git = "https://github.com/WizardOfMenlo/whir", features = [
    "tracing",
], rev = "74936effc0fdac288f2ff4881a04bf41cdf1f78e" }
spongefish = { git = "https://github.com/arkworks-rs/spongefish", features = [
    "arkworks-algebra",
] }
ark-ff = { version = "0.5", features = ["asm", "std"] }
ark-bn254 = { version = "0.5.0", default-features = false, features = [
    "scalar_field",
] }
zeroize = "1.8.1"
ark-crypto-primitives = { version = "0.5", features = ["merkle_tree"] }
spongefish-pow = { git = "https://github.com/arkworks-rs/spongefish" }
ark-poly = "0.5"
ark-std = { version = "0.5", features = ["std"] }
ark-serialize = "0.5"

# Bin
anyhow = "1.0.93"
argh = "0.1.12"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
