[workspace]
resolver = "2"
members = [
  "noir-r1cs",
  "fp-rounding",
  "hla",
  "block-multiplier",
  "block-multiplier-codegen",
  "skyscraper",
  "noir-tools",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
authors = [
  "Remco Bloemen <remco@world.org>",
  "Philipp Sippl <philipp@world.org>",
  "Yuval Domb",
  "Xander van der Goot",
  "Koh Wei Jie",
  "Tony Wu",
  # TODO: More contributors
]
license = "MIT"
homepage = "https://github.com/worldfnd/ProveKit"
repository = "https://github.com/worldfnd/ProveKit"

[workspace.lints.clippy]
cargo = "warn"
perf = "warn"
complexity = "warn"
style = "warn"
correctness = "warn"
suspicious = "warn"

cargo_common_metadata = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
missing_docs_in_private_items = { level = "allow", priority = 1 }

missing_safety_doc = { level = "deny", priority = 1 }

[profile.release]
debug = true      # Generate symbol info for profiling
opt-level = 3
codegen-units = 1
lto = "fat"

# Doing light optimizations helps test performance more than it hurts build time.
[profile.test]
opt-level = 2

# Compilation profile for any non-workspace member. We want to optimize these even in debug mode.
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
# Workspace members
block-multiplier = { path = "block-multiplier" }
block-multiplier-codegen = { path = "block-multiplier-codegen" }
fp-rounding = { path = "fp-rounding" }
hla = { path = "hla" }
noir-r1cs = { path = "noir-r1cs" }
noir-tools = { path = "noir-tools" }
skyscraper = { path = "skyscraper" }

# 3rd party
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22.1"
divan = { package = "codspeed-divan-compat", version = "2.10.1" }
ruint = { version = "1.12.3", features = ["num-traits", "rand"] }
seq-macro = "0.3.6"
primitive-types = "0.13.1"
paste = "1.0.15"
arrayvec = "0.7.6"
blake3 = "1.8.2"
gensym = "0.1.1"
rand = "0.9.1"
rand08 = { package = "rand", version = "0.8" }
halo2curves = { version = "0.7.0", features = ["bn256-table"] }
criterion = "0.5.1"
linkme = "0.3.32"
lazy_static = "1.5.0"
num-traits = "0.2.19"
num = "0.4.3"
sha3 = { version = "0.10.8", features = ["asm"] }
subtle = "2.6.1"
static_assertions = "1.1"
tracing = "0.1.41"
bytemuck = "1.22.0"
hex-literal = "1"
hex = "0.4.3"
itertools = "0.14.0"
flate2 = "1.0"
rayon = "1.10.0"
bincode = "1.3"
postcard = { version = "1.1.1", features = ["use-std"] }
zstd = "0.13.3"
bytes = "1.10.1"
proptest = "1.6.0"
zerocopy = "0.8.25"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand_chacha = "0.9.0"
test-case = "3.3.1"

# Note: to simplify things, pick a version that has the same `ark_ff` version as `whir`.
acir = { git = "https://github.com/noir-lang/noir", rev = "nightly-2025-05-28" }
noirc_abi = { git = "https://github.com/noir-lang/noir", rev = "nightly-2025-05-28" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir", rev = "nightly-2025-05-28" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", rev = "nightly-2025-05-28" }
nargo = { git = "https://github.com/noir-lang/noir", rev = "nightly-2025-05-28" }
nargo_toml = { git = "https://github.com/noir-lang/noir", rev = "nightly-2025-05-28" }
noirc_driver = { git = "https://github.com/noir-lang/noir", rev = "nightly-2025-05-28" }
nargo_cli = { git = "https://github.com/noir-lang/noir", rev = "nightly-2025-05-28" }
noir_artifact_cli = { git = "https://github.com/noir-lang/noir", rev = "nightly-2025-05-28" }

# WHIR
whir = { git = "https://github.com/WizardOfMenlo/whir", features = [
  "tracing",
], rev = "74936effc0fdac288f2ff4881a04bf41cdf1f78e" }
spongefish = { git = "https://github.com/arkworks-rs/spongefish", features = [
  "arkworks-algebra",
] }
ark-ff = { version = "0.5", features = ["asm", "std"] }
ark-bn254 = { version = "0.5.0", default-features = false, features = [
  "scalar_field",
] }
zeroize = "1.8.1"
ark-crypto-primitives = { version = "0.5", features = ["merkle_tree"] }
spongefish-pow = { git = "https://github.com/arkworks-rs/spongefish" }
ark-poly = "0.5"
ark-std = { version = "0.5", features = ["std"] }
ark-serialize = "0.5"

# Bin
anyhow = "1.0.93"
argh = "0.1.12"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
