[workspace]
resolver = "2"
members = [
  "skyscraper/fp-rounding",
  "skyscraper/hla",
  "skyscraper/block-multiplier",
  "skyscraper/block-multiplier-codegen",
  "skyscraper/core",
  "provekit/common",
  "provekit/r1cs-compiler",
  "provekit/prover",
  "provekit/verifier",
  "tooling/cli",
  "tooling/provekit-bench",
  "tooling/provekit-gnark",
  "tooling/verifier-server",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
authors = [
  "Remco Bloemen <remco@world.org>",
  "Philipp Sippl <philipp@world.org>",
  "Yuval Domb",
  "Xander van der Goot",
  "Koh Wei Jie",
  "Tony Wu",
  "Vishruti Ganesh",
  "Benjamin Wilson",
  "Yogesh Swami",
  "Ryan Cao",
  "Aditya Bisht",
  # TODO: More contributors
]
license = "MIT"
homepage = "https://github.com/worldfnd/ProveKit"
repository = "https://github.com/worldfnd/ProveKit"

[workspace.lints.clippy]
cargo = "warn"
perf = "warn"
complexity = "warn"
style = "warn"
correctness = "warn"
suspicious = "warn"

cargo_common_metadata = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
missing_docs_in_private_items = { level = "allow", priority = 1 }

missing_safety_doc = { level = "deny", priority = 1 }

[profile.release]
debug = true      # Generate symbol info for profiling
opt-level = 3
codegen-units = 1
lto = "fat"

# Doing light optimizations helps test performance more than it hurts build time.
[profile.test]
opt-level = 2

# Compilation profile for any non-workspace member. We want to optimize these even in debug mode.
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
# Workspace members - Skyscraper
block-multiplier = { path = "skyscraper/block-multiplier" }
block-multiplier-codegen = { path = "skyscraper/block-multiplier-codegen" }
fp-rounding = { path = "skyscraper/fp-rounding" }
hla = { path = "skyscraper/hla" }
skyscraper = { path = "skyscraper/core" }

# Workspace members - ProveKit
provekit-bench = { path = "tooling/provekit-bench" }
provekit-cli = { path = "tooling/cli" }
provekit-common = { path = "provekit/common" }
provekit-gnark = { path = "tooling/provekit-gnark" }
provekit-prover = { path = "provekit/prover" }
provekit-r1cs-compiler = { path = "provekit/r1cs-compiler" }
provekit-verifier = { path = "provekit/verifier" }
provekit-verifier-server = { path = "tooling/verifier-server" }

# 3rd party
anyhow = "1.0.93"
argh = "0.1.12"
axum = "0.8.4"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
divan = { package = "codspeed-divan-compat", version = "3.0.1" }
hex = "0.4.3"
paste = "1.0.15"
postcard = { version = "1.1.1", features = ["use-std"] }
primitive-types = "0.13.1"
proptest = "1.6.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.9.1"
rand08 = { package = "rand", version = "0.8" }
rayon = "1.10.0"
reqwest = "0.12.23"
ruint = { version = "1.12.3", features = ["num-traits", "rand"] }
seq-macro = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
test-case = "3.3.1"
toml = "0.8.8"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.13"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
tracing-tracy = "=0.11.4"
tracy-client= "=0.18.0"
tracy-client-sys= "=0.24.3"
zerocopy = "0.8.25"
zeroize = "1.8.1"
zstd = "0.13.3"

# Noir language dependencies
acir = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.6" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.6" }
nargo = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.6" }
nargo_cli = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.6" }
nargo_toml = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.6" }
noir_artifact_cli = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.6" }
noirc_abi = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.6" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.6" }
noirc_driver = { git = "https://github.com/noir-lang/noir", rev = "v1.0.0-beta.6" }

# Cryptography and proof systems
ark-bn254 = { version = "0.5.0", default-features = false, features = ["scalar_field"] }
ark-crypto-primitives = { version = "0.5", features = ["merkle_tree"] }
ark-ff = { version = "0.5", features = ["asm", "std"] }
ark-poly = "0.5"
ark-serialize = "0.5"
ark-std = { version = "0.5", features = ["std"] }
spongefish = { git = "https://github.com/arkworks-rs/spongefish", features = ["arkworks-algebra"] }
spongefish-pow = { git = "https://github.com/arkworks-rs/spongefish" }
whir = { git = "https://github.com/WizardOfMenlo/whir/", features = ["tracing"], rev = "3e7f8c299783fddf4354869bbcbc995a5018a9d4" }
