[package]
name = "cm31_ntt"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = "0.2.19"
num = "0.4.3"
rand = "0.8.5"
criterion = "0.5.1"
rayon.workspace = true
lazy_static = "1.5.0"

[dev-dependencies]
rand_chacha = "0.3.1"

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "ntt_precomp"
harness = false

[[bench]]
name = "ntt_vec"
harness = false

[[bench]]
name = "ntt_vec_precomp"
harness = false

[[bench]]
name = "ntt_in_place"
harness = false
