[package]
name = "cm31_ntt"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = "0.2.19"
num = "0.4.3"
rand = "0.8.5"
criterion = "0.5.1"
rayon.workspace = true
lazy_static = "1.5.0"

[dev-dependencies]
rand_chacha = "0.3.1"

[[bench]]
name = "ntt_r8_vec"
harness = false

[[bench]]
name = "ntt_r8_vec_p"
harness = false

[[bench]]
name = "ntt_r8_ip"
harness = false

[[bench]]
name = "ntt_r8_ip_p"
harness = false

[[bench]]
name = "ntt_r8_hybrid_ps"
harness = false

[[bench]]
name = "ntt_r8_hybrid_p"
harness = false
