[package]
name = "fp-rounding"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "main"
harness = false
