[package]
name = "merkle-hash-bench"
version = "0.1.0"
edition = "2021"

[features]
default = ["plonky3", "zkhash"]
plonky3 = [
    "dep:p3-bn254-fr",
    "dep:p3-goldilocks",
    "dep:p3-mersenne-31",
    "dep:p3-field",
    "dep:p3-poseidon2",
    "dep:p3-symmetric",
    "dep:p3-monolith",
    "dep:p3-rescue",
]
icicle = [
    "dep:icicle-core",
    "dep:icicle-runtime",
    "dep:icicle-hash",
    "dep:icicle-bn254",
    "dep:icicle-m31",
]
zkhash = ["dep:zkhash"]
stwo = ["dep:stwo-prover"]

[lints]
workspace = true

[dependencies]
ruint.workspace = true
rand.workspace = true
subtle.workspace = true
bytemuck.workspace = true
hex-literal.workspace = true
argh.workspace = true
anyhow.workspace = true

ark-ff = { version = "0.5.0", features = ["asm"] }
arrayvec = "0.7.6"
blake3 = "1.5.4"
halo2curves = { version = "0.7.0", features = ["bn256-table"] }
num-traits = "0.2.19"
sha3 = { version = "0.10.8", features = ["asm"] }
zerocopy = { version = "0.8.17", features = ["simd"] }
linkme = "0.3.31"
gensym = "0.1.1"

skyscraper = { path = "../skyscraper" }


# Plonky 3
p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main", optional = true, features = [
    "table",
] }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main", optional = true }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main", optional = true }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main", optional = true }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main", optional = true }
p3-monolith = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main", optional = true }
p3-rescue = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main", optional = true }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main", optional = true }

# Icicle dependenciesp3-bn254-fr = { version = "0.2.0", features = ["table"] }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", branch = "main", optional = true }
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", branch = "main", optional = true }
icicle-hash = { git = "https://github.com/ingonyama-zk/icicle.git", branch = "main", optional = true }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", branch = "main", optional = true }
icicle-m31 = { git = "https://github.com/ingonyama-zk/icicle.git", branch = "main", optional = true }

# ZKHash
zkhash = { git = "https://extgit.isec.tugraz.at/krypto/zkfriendlyhashzoo.git", rev = "f252d2b2767bc88659615601ac13e19f52c2c11f", optional = true }

# Stwo
stwo-prover = { git = "https://github.com/starkware-libs/stwo.git", version = "0.1.1", optional = true }
