[package]
name = "noir-r1cs"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
argh.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
clap = { version = "4.4", features = ["derive"] }

# Noir lang
acir.workspace = true
acvm.workspace = true
acir_field.workspace = true
noirc_artifacts.workspace = true
noirc_abi.workspace = true
noirc_printable_type.workspace = true
rand.workspace = true

flate2 = "1.0"
bincode = "1.3"

[[bin]]
name = "circuit_stats"
path = "src/bin/circuit_stats.rs"