[package]
name = "noir-r1cs"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
argh.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
clap.workspace = true
zeroize.workspace = true
itertools.workspace = true
ruint.workspace = true
flate2.workspace = true
bincode.workspace = true
rand.workspace = true

# Noir lang
acir.workspace = true
acvm.workspace = true
acir_field.workspace = true
noirc_artifacts.workspace = true
noirc_abi.workspace = true
noirc_printable_type.workspace = true
bn254_blackbox_solver.workspace = true

# WHIR
whir.workspace = true
spongefish.workspace = true
spongefish-pow.workspace = true
ark-ff.workspace = true
ark-crypto-primitives.workspace = true
ark-poly.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true

[[bin]]
name = "circuit_stats"
path = "src/bin/circuit_stats.rs"

[[bin]]
name = "prover"
path = "src/bin/prover.rs"
