[package]
name = "noir-r1cs"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "noir-r1cs"
path = "src/cli/main.rs"

[dependencies]
# 3rd party
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
zeroize.workspace = true
itertools.workspace = true
ruint.workspace = true
flate2.workspace = true
bincode.workspace = true
rand.workspace = true
hex.workspace = true
rayon.workspace = true
postcard.workspace = true
zstd.workspace = true
bytes.workspace = true
bytemuck.workspace = true
skyscraper.workspace = true
static_assertions.workspace = true
zerocopy.workspace = true

# Ark
rand08.workspace = true

# Noir lang
acir.workspace = true
noirc_artifacts.workspace = true
noirc_abi.workspace = true
nargo.workspace = true
noir_artifact_cli.workspace = true
bn254_blackbox_solver.workspace = true

# WHIR
whir.workspace = true
spongefish.workspace = true
spongefish-pow.workspace = true
ark-ff.workspace = true
ark-crypto-primitives.workspace = true
ark-poly.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true

# Binary
# See <https://github.com/rust-lang/cargo/issues/1982>
argh.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# Internal
noir-tools.workspace = true

# 3rd Party
rand.workspace = true
divan.workspace = true
test-case.workspace = true

[[bench]]
name = "bench"
harness = false
