[package]
name = "noir-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true

nargo.workspace = true
nargo_toml.workspace = true
noirc_driver.workspace = true
nargo_cli.workspace = true

[lints]
workspace = true
