[package]
name = "ntt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ark-bn254.workspace = true
rayon.workspace = true
ark-ff.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
