[package]
name = "prover"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
whir = { git = "https://github.com/WizardOfMenlo/whir", branch="veljko/gr1cs"}
ruint = "1.12.3"
ruint-macro = "1.2.1"
nimue = { git = "https://github.com/arkworks-rs/nimue", features = ["ark"] }
ark-ff = { version = "0.5", features = ["asm", "std"] }
zeroize = "1.8.1"
ark-crypto-primitives = { version = "0.5", features = ["merkle_tree"] }
rand = "0.8"
nimue-pow = { git = "https://github.com/arkworks-rs/nimue"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-poly = "0.5"
ark-std = { version = "0.5", features = ["std"] }
ark-serialize = "0.5"
clap = { version = "4.4.17", features = ["derive"] }
itertools = "0.13.0"



[lints]
workspace = true
