[package]
name = "skyscraper"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
block-multiplier = { path = "../block-multiplier" }

[dev-dependencies]
rand = "0.9.0"
primitive-types = "0.13.1"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false