[package]
name = "skyscraper"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
block-multiplier = { path = "../block-multiplier" }
fp-rounding = { path = "../fp-rounding" }
ark-ff.workspace = true
ark-bn254.workspace = true
zerocopy = "0.8.25"
seq-macro = "0.3.6"
proptest = "1.6.0"

[dev-dependencies]
rand.workspace = true
divan.workspace = true
primitive-types = "0.13.1"

[[bench]]
name = "bench"
harness = false
