[package]
name = "cm31_ntt"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits.workspace = true
num.workspace = true
rand.workspace = true
criterion.workspace = true
rayon.workspace = true
lazy_static.workspace = true
serde.workspace = true
anyhow.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
bincode.workspace = true
test-case.workspace = true

[[bench]]
name = "ntt_r8_vec"
harness = false

[[bench]]
name = "ntt_r8_vec_p"
harness = false

[[bench]]
name = "ntt_r8_ip"
harness = false

[[bench]]
name = "ntt_r8_ip_p"
harness = false

[[bench]]
name = "ntt_r8_hybrid_ps"
harness = false

[[bench]]
name = "ntt_r8_hybrid_p"
harness = false

[[bench]]
name = "ntt_r8_s2_hybrid_p"
harness = false

[[bench]]
name = "ntt_r8_s4_hybrid_p"
harness = false

[[bench]]
name = "ntt_block_8"
harness = false
