[package]
name = "passport-input-gen"
version = "0.1.0"
edition = "2021"
description = "Passport input generator"

[dependencies]
rsa = { version = "0.9.8", features = ["sha2"] }
sha2 = { version = "0.10", features = ["compress"] }
x509-parser = "0.16"
base64 = "0.22"
hex = "0.4"
rasn = "0.15"
rasn-pkix = "0.15"
rasn-cms = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.8"
noir-bignum-paramgen = "0.1.5"
thiserror = "2.0.16"
signature = "2.2"
lazy_static = "1.5.0"

