[package]
name = "provekit-verifier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal
provekit-common.workspace = true
provekit-prover.workspace = true

# 3rd party
anyhow.workspace = true
tracing.workspace = true

# WHIR
whir.workspace = true
ark-std.workspace = true
spongefish.workspace = true

[lints]
workspace = true
