[package]
name = "block-multiplier-codegen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
hla.workspace = true

[lints]
workspace = true
