[package]
name = "provekit-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal
provekit-common.workspace = true
r1cs-compiler.workspace = true
provekit-prover.workspace = true
provekit-verifier.workspace = true
provekit-gnark.workspace = true

# Noir lang
acir.workspace = true

# Binary
argh.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# 3rd party
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

[lints]
workspace = true
