[package]
name = "provekit-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
provekit-common.workspace = true
provekit-gnark.workspace = true
provekit-prover.workspace = true
provekit-r1cs-compiler.workspace = true
provekit-verifier.workspace = true

# Noir language
acir.workspace = true

# 3rd party
anyhow.workspace = true
argh.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
