[package]
name = "provekit-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
provekit-common.workspace = true
provekit-prover.workspace = true
provekit-r1cs-compiler.workspace = true
provekit-verifier.workspace = true

# Noir language
nargo.workspace = true
nargo_cli.workspace = true
nargo_toml.workspace = true
noirc_driver.workspace = true
noirc_artifacts.workspace = true

# 3rd party
anyhow.workspace = true
divan.workspace = true
serde.workspace = true
test-case.workspace = true
toml.workspace = true

[lints]
workspace = true

[[bench]]
name = "bench"
harness = true