[package]
name = "provekit-gnark"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal
provekit-common.workspace = true

# 3rd party
serde.workspace = true
serde_json.workspace = true
ark-poly.workspace = true
tracing.workspace = true

[lints]
workspace = true
